--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/eltharynd/elthabot#readme",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/node": "^14.14.37",
+    "@types/tmi.js": "^1.7.1",
     "nodemon": "^2.0.7",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
@@ -26,7 +28,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "fs": "0.0.1-security",
+    "mongoose": "^5.12.3",
     "rjs": "^4.0.2",
-    "tmi": "^2.0.0"
+    "rxjs": "^6.6.6",
+    "tmi.js": "^1.7.5",
+    "twitch-api-v5": "^2.0.4"
   }
 }
