--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
         "noImplicitAny": false,
         "target": "es5",
         "moduleResolution": "node",
+        "noStrictGenericChecks": false,
     }
 }
