--- a/package.json
+++ b/package.json
@@ -19,18 +19,32 @@
   "homepage": "https://github.com/eltharynd/elthabot#readme",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/noble": "0.0.40",
     "@types/node": "^14.14.37",
+    "@types/socket.io": "^2.1.13",
     "@types/tmi.js": "^1.7.1",
     "nodemon": "^2.0.7",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "array-buffer-to-hex": "^1.0.0",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "miband": "^0.1.4",
     "mongoose": "^5.12.3",
+    "noble": "^1.9.1",
     "rjs": "^4.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^6.6.7",
+    "socket.io": "^4.0.1",
     "tmi.js": "^1.7.5",
     "twitch-api-v5": "^2.0.4"
   }
