--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "outDir": "dist",
         "noImplicitAny": false,
         "target": "es5",
-        "moduleResolution": "node",
+        "moduleResolution": "classic",
         "noStrictGenericChecks": false,
     }
 }
