--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
         "target": "es5",
         "moduleResolution": "node",
         "noStrictGenericChecks": false,
+        "types": ["node"]
     }
 }
