--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "setup": "node init",
     "build": "rm -rf dist && tsc --project tsconfig.backend.json",
     "start": "ng serve --host 0.0.0.0 --port 443 & node dist/index.js",
-    "serve": "tsc --project tsconfig.backend.json && nodemon dist/index.js & ng serve --host 0.0.0.0 --port 443 & tsc -w --project tsconfig.backend.json"
+    "serve": "tsc --project tsconfig.backend.json && nodemon dist/index.js & ng serve --host 0.0.0.0 --port 443 & tsc -w --project tsconfig.backend.json",
+    "angular": "nodemon dist/index.js",
+    "backend": "ng serve --host 0.0.0.0 --port 443"
   },
   "private": true,
   "dependencies": {
