--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "echo n | npm install && rm -rf dist && tsc --project tsconfig.backend.json",
     "start": "ng serve --host 0.0.0.0 --port 443 & node dist/index.js",
     "serve": "tsc --project tsconfig.backend.json && nodemon dist/index.js & ng serve --host 0.0.0.0 --port 443 & tsc -w --project tsconfig.backend.json",
-    "angular": "nodemon dist/index.js",
-    "backend": "ng serve --host 0.0.0.0 --port 443"
+    "angular": "ng serve --host 0.0.0.0 --port 443",
+    "backend": "nodemon dist/index.js"
+
   },
   "private": true,
   "dependencies": {
