--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "setup": "node init",
     "build": "echo n | npm install && rm -rf dist && tsc --project tsconfig.backend.json",
-    "start": "ng serve --host 0.0.0.0 --port 443 & node dist/index.js",
-    "serve": "tsc --project tsconfig.backend.json && nodemon dist/index.js & ng serve --host 0.0.0.0 --port 443 & tsc -w --project tsconfig.backend.json",
-    "angular": "ng serve --host 0.0.0.0 --port 443",
+    "start": "ng serve --host 0.0.0.0 & node dist/index.js",
+    "serve": "tsc --project tsconfig.backend.json && nodemon dist/index.js & ng serve --host 0.0.0.0 & tsc -w --project tsconfig.backend.json",
+    "angular": "ng serve --host 0.0.0.0",
     "backend": "nodemon dist/index.js"
 
   },
