--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "noImplicitAny": false,
     "lib": [
       "es2018",
       "dom"
@@ -27,5 +26,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "src/backend/*.ts",
+    "src/backend/**/*.ts",
+    "src/backend/**/*.json"
+  ]
 }
