--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "setup": "node init",
-    "build": "echo n | npm install && rm -rf dist && tsc --project tsconfig.backend.json",
+    "build": "echo n | npm install && rm -rf dist && tsc --project backend.tsconfig.json",
     "start": "ng serve --host 0.0.0.0 --disable-host-check & node dist/index.js",
-    "serve": "tsc --project tsconfig.backend.json && nodemon dist/index.js & ng serve --host=0.0.0.0 & tsc -w --project tsconfig.backend.json",
+    "serve": "tsc --project backend.tsconfig.json && nodemon dist/index.js & ng serve --host=0.0.0.0 & tsc -w --project backend.tsconfig.json",
     "angular": "ng serve --host=0.0.0.0 --disable-host-check",
     "backend": "nodemon dist/index.js"
 
