--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "serve": "tsc --project backend.tsconfig.json && nodemon dist/index.js & ng serve --host=0.0.0.0 & tsc -w --project backend.tsconfig.json",
     "angular": "ng serve --host=0.0.0.0 --disable-host-check",
     "backend": "nodemon dist/index.js"
-
   },
   "private": true,
   "dependencies": {
@@ -21,6 +20,11 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@twurple/api": "^5.0.0-pre.14",
+    "@twurple/auth": "^5.0.0-pre.14",
+    "@twurple/chat": "^5.0.0-pre.14",
+    "@twurple/eventsub": "^5.0.0-pre.14",
+    "@twurple/pubsub": "^5.0.0-pre.14",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -35,7 +39,6 @@
     "socket.io-client": "^4.1.3",
     "tmi.js": "^1.8.3",
     "tslib": "^2.2.0",
-    "twitch-api-v5": "^2.0.4",
     "twitch-auth": "^4.6.4",
     "twitch-auth-tmi": "^4.6.4",
     "zone.js": "~0.11.4"
