--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "tslib": "^2.2.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
