--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@d-fischer/logger": "^4.0.0",
     "@twurple/api": "^5.0.0-pre.14",
     "@twurple/auth": "^5.0.0-pre.14",
     "@twurple/chat": "^5.0.0-pre.14",
