--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "open": "^8.2.1",
     "rjs": "^4.0.2",
     "rxjs": "^6.6.7",
-    "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3",
+    "socket.io": "@4.1.3",
+    "socket.io-client": "@4.1.3",
     "tslib": "^2.2.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
