--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
-    "@angular/cdk": "^12.1.4",
+    "@angular/cdk": "^12.0.0",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "@d-fischer/logger": "^4.0.0",
+    "@nebular/eva-icons": "8.0.0",
+    "@nebular/theme": "^8.0.0",
     "@twurple/api": "^5.0.0-pre.14",
     "@twurple/auth": "^5.0.0-pre.14",
     "@twurple/chat": "^5.0.0-pre.14",
@@ -31,6 +33,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "eva-icons": "^1.1.2",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
@@ -48,6 +51,7 @@
     "@angular-devkit/build-angular": "~12.1.2",
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
+    "@schematics/angular": "~12.1.2",
     "@types/body-parser": "^1.19.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
