--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "@d-fischer/logger": "^4.0.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@nebular/eva-icons": "8.0.0",
     "@nebular/theme": "^8.0.0",
     "@twurple/api": "^5.0.0-pre.14",
@@ -32,12 +33,15 @@
     "@twurple/pubsub": "^5.0.0-pre.14",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.0",
     "cors": "^2.8.5",
     "eva-icons": "^1.1.2",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "ionicons": "^5.5.3",
     "mongoose": "^5.13.3",
+    "nebular-icons": "^1.1.0",
     "open": "^8.2.1",
     "rjs": "^4.0.2",
     "rxjs": "^6.6.7",
