--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.8.5",
     "eva-icons": "^1.1.2",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "ionicons": "^5.5.3",
