--- a/package.json
+++ b/package.json
@@ -2,22 +2,20 @@
   "name": "ccarbn",
   "version": "1.0.0",
   "scripts": {
-    "setup": "node init",
-    "build": "echo n | npm install && rm -rf dist && tsc --project backend.tsconfig.json",
-    "start": "ng serve --host 0.0.0.0 --disable-host-check & node dist/index.js",
-    "serve": "tsc --project backend.tsconfig.json && nodemon dist/index.js & ng serve --host=0.0.0.0 & tsc -w --project backend.tsconfig.json",
+    "build": "rm -rf dist && echo n | npm install && tsc --project backend.tsconfig.json",
+    "start": "NODE_ENV='production' node dist/backend/index.js",
+    "start-win": "SET NODE_ENV='production' && node dist/backend/index.js",
     "angular": "ng serve --host=0.0.0.0 --disable-host-check",
-    "backend": "nodemon dist/index.js"
+    "backend": "nodemon dist/backend/index.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
-    "@angular/cdk": "^12.0.0",
+    "@angular/cdk": "^12.2.0",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
     "@angular/forms": "~12.1.2",
-    "@angular/http": "^7.2.16",
     "@angular/material": "^12.1.4",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
@@ -46,8 +44,8 @@
     "open": "^8.2.1",
     "rjs": "^4.0.2",
     "rxjs": "^6.6.7",
-    "socket.io": "4.1.3",
-    "socket.io-client": "4.1.3",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "tslib": "^2.2.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
@@ -60,15 +58,8 @@
     "@types/body-parser": "^1.19.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.17",
     "@types/socket.io": "^3.0.2",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "nodemon": "^2.0.12",
     "typescript": "~4.3.2"
   }
