--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "echo n| npm install && ng build && rm -rf dist/backend && tsc --project backend.tsconfig.json",
     "start": "NODE_ENV='production' node dist/backend/index.js",
     "start-win": "SET NODE_ENV='production' && node dist/backend/index.js",
-    "angular": "ng serve --host=0.0.0.0 --disable-host-check",
+    "angular": "ng serve",
     "backend": "nodemon dist/backend/index.js"
   },
   "private": true,
