--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.0",
     "cors": "^2.8.5",
+    "deepmerge": "^4.2.2",
     "eva-icons": "^1.1.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
