--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "http": "0.0.1-security",
     "ionicons": "^5.5.3",
     "mongoose": "^5.13.3",
+    "mongoose-gridfs": "^1.2.48",
+    "multer": "^1.4.3",
     "nebular-icons": "^1.1.0",
     "open": "^8.2.1",
     "rjs": "^4.0.2",
