users that remove permissions now get deleted on boot

--- a/backend.tsconfig.json
+++ b/backend.tsconfig.json
@@ -12,6 +12,7 @@
       "moduleResolution": "node",
       "noStrictGenericChecks": false,
       "rootDir": "src/backend",
+      "sourceMap": true,
       "strictPropertyInitialization": false
   }
 }
