--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,5 +12,10 @@
   ],
   "include": [
     "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "src/backend/*.ts",
+    "src/backend/**/*.ts",
+    "src/backend/**/*.json"
   ]
 }
