--- a/package.json
+++ b/package.json
@@ -11,59 +11,60 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.1",
-    "@angular/cdk": "^12.2.0",
-    "@angular/common": "~13.2.1",
-    "@angular/compiler": "~13.2.1",
-    "@angular/core": "~13.2.1",
-    "@angular/forms": "~13.2.1",
-    "@angular/material": "^12.1.4",
-    "@angular/platform-browser": "~13.2.1",
-    "@angular/platform-browser-dynamic": "~13.2.1",
-    "@angular/router": "~13.2.1",
-    "@d-fischer/logger": "^4.0.0",
-    "@nebular/eva-icons": "8.0.0",
-    "@nebular/theme": "^8.0.0",
-    "@twurple/api": "^5.0.0-pre.14",
-    "@twurple/auth": "^5.0.0-pre.14",
-    "@twurple/chat": "^5.0.0-pre.14",
-    "@twurple/eventsub": "^5.0.0-pre.14",
-    "@twurple/pubsub": "^5.0.0-pre.14",
-    "axios": "^0.21.2",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^5.1.0",
+    "@angular/animations": "^13.3.4",
+    "@angular/cdk": "^13.3.4",
+    "@angular/common": "^13.3.4",
+    "@angular/compiler": "^13.3.4",
+    "@angular/core": "^13.3.4",
+    "@angular/forms": "^13.3.4",
+    "@angular/material": "^13.3.4",
+    "@angular/platform-browser": "^13.3.4",
+    "@angular/platform-browser-dynamic": "^13.3.4",
+    "@angular/router": "^13.3.4",
+    "@d-fischer/logger": "^4.2.0",
+    "@nebular/eva-icons": "^9.0.2",
+    "@nebular/theme": "^9.0.2",
+    "@twurple/api": "^5.1.1",
+    "@twurple/auth": "^5.1.1",
+    "@twurple/chat": "^5.1.1",
+    "@twurple/eventsub": "^5.1.1",
+    "@twurple/pubsub": "^5.1.1",
+    "axios": "^0.26.1",
+    "body-parser": "^1.20.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
-    "eva-icons": "^1.1.2",
-    "express": "^4.17.1",
+    "eva-icons": "^1.1.3",
+    "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
-    "fs": "0.0.1-security",
-    "http": "0.0.1-security",
-    "ionicons": "^5.5.3",
-    "mongoose": "^6.2.0",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "ionicons": "^6.0.1",
+    "mongoose": "^6.3.1",
     "mongoose-gridfs": "^1.3.0",
-    "multer": "^1.4.3",
+    "multer": "^1.4.4",
     "nebular-icons": "^1.1.0",
-    "open": "^8.2.1",
+    "open": "^8.4.0",
     "rjs": "^4.0.2",
-    "rxjs": "^6.6.7",
-    "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3",
-    "tslib": "^2.2.0",
+    "rxjs": "^7.5.5",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "tslib": "^2.4.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.1",
-    "@angular/cli": "~13.2.1",
-    "@angular/compiler-cli": "~13.2.1",
-    "@schematics/angular": "~12.1.2",
-    "@types/body-parser": "^1.19.1",
+    "@angular-devkit/build-angular": "^13.3.3",
+    "@angular/cli": "^13.3.3",
+    "@angular/compiler-cli": "^13.3.4",
+    "@schematics/angular": "^13.3.3",
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^12.20.17",
+    "@types/node": "^17.0.25",
     "@types/socket.io": "^3.0.2",
-    "nodemon": "^2.0.12",
-    "typescript": "~4.5.5"
+    "nodemon": "^2.0.15",
+    "typescript": "^4.6.3",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
