--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^13.3.4",
     "@angular/router": "^13.3.4",
     "@d-fischer/logger": "^4.2.0",
+    "@google-cloud/text-to-speech": "^3.4.0",
     "@nebular/eva-icons": "^9.0.2",
     "@nebular/theme": "^9.0.2",
     "@twurple/api": "^5.1.1",
