--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/platform-browser-dynamic": "^13.3.4",
     "@angular/router": "^13.3.4",
     "@d-fischer/logger": "^4.2.0",
-    "@google-cloud/text-to-speech": "^3.4.0",
     "@nebular/eva-icons": "^9.0.2",
     "@nebular/theme": "^9.0.2",
     "@twurple/api": "^5.1.1",
@@ -45,6 +44,7 @@
     "mongoose-gridfs": "^1.3.0",
     "multer": "^1.4.4",
     "nebular-icons": "^1.1.0",
+    "node-gtts": "^2.0.2",
     "open": "^8.4.0",
     "rjs": "^4.0.2",
     "rxjs": "^7.5.5",
