obs elements implemented

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [],
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "allowSyntheticDefaultImports": true
   },
   "files": [
     "src/main.ts",
