--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "multer": "^1.4.4",
     "nebular-icons": "^1.1.0",
     "node-gtts": "^2.0.2",
+    "obs-websocket-js": "^5.0.0-beta.1",
     "open": "^8.4.0",
     "rjs": "^4.0.2",
     "rxjs": "^7.5.5",
@@ -63,6 +64,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.25",
+    "@types/obs-studio": "^2.17.0",
     "@types/socket.io": "^3.0.2",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.3",
