--- a/backend.tsconfig.json
+++ b/backend.tsconfig.json
@@ -1,19 +1,3 @@
 {
-  "include": [
-      "src/backend/*.ts",
-      "src/backend/**/*.ts",
-      "src/backend/**/*.json"
-  ],
-  "compileOnSave": false,
-  "compilerOptions": {
-      "moduleResolution": "node",
-      "noImplicitAny": false,
-      "noStrictGenericChecks": true,
-      "outDir": "dist/backend",
-      "rootDir": "src/backend",
-      "sourceMap": true,
-      "strictNullChecks": false,
-      "strictPropertyInitialization": false,
-      "target": "es5"
-  }
+    "extends": "./src/backend/tsconfig.json"
 }
