--- a/backend.tsconfig.json
+++ b/backend.tsconfig.json
@@ -1,3 +1,7 @@
 {
-    "extends": "./src/backend/tsconfig.json"
+    "extends": "./src/backend/tsconfig.json",
+    "compilerOptions": {
+        "outDir": "dist/backend",
+        "rootDir": "src/backend"
+    }
 }
