--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular/platform-browser": "^13.3.4",
     "@angular/platform-browser-dynamic": "^13.3.4",
     "@angular/router": "^13.3.4",
+    "@aws-sdk/client-polly": "^3.81.0",
     "@d-fischer/logger": "^4.2.0",
+    "@google-cloud/text-to-speech": "^3.4.0",
     "@nebular/eva-icons": "^9.0.2",
     "@nebular/theme": "^9.0.2",
     "@twurple/api": "^5.1.1",
