--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mongoose-gridfs": "^1.3.0",
     "multer": "^1.4.4",
     "nebular-icons": "^1.1.0",
+    "ngx-device-detector": "^3.0.0",
     "node-gtts": "^2.0.2",
     "obs-websocket-js": "^5.0.0-beta.1",
     "open": "^8.4.0",
