--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.26.1",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
     "eva-icons": "^1.1.3",
@@ -52,6 +53,7 @@
     "multer": "^1.4.4",
     "nebular-icons": "^1.1.0",
     "ng-apexcharts": "^1.7.1",
+    "ng2-charts": "^3.0.11",
     "ngx-clipboard": "^15.1.0",
     "ngx-device-detector": "^3.0.0",
     "node-gtts": "^2.0.2",
