--- a/package.json
+++ b/package.json
@@ -17,69 +17,69 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.1",
-    "@angular/cdk": "^13.3.4",
+    "@angular/cdk": "^14.1.1",
     "@angular/common": "^14.1.1",
     "@angular/compiler": "^14.1.1",
     "@angular/core": "^14.1.1",
     "@angular/forms": "^14.1.1",
-    "@angular/material": "^13.3.4",
+    "@angular/material": "^14.1.1",
     "@angular/platform-browser": "^14.1.1",
     "@angular/platform-browser-dynamic": "^14.1.1",
     "@angular/router": "^14.1.1",
-    "@aws-sdk/client-polly": "^3.81.0",
+    "@aws-sdk/client-polly": "^3.142.0",
     "@d-fischer/logger": "^4.2.0",
-    "@google-cloud/text-to-speech": "^3.4.0",
-    "@nebular/eva-icons": "^9.0.2",
-    "@nebular/theme": "^9.0.2",
-    "@twurple/api": "^5.1.1",
-    "@twurple/auth": "^5.1.1",
-    "@twurple/chat": "^5.1.1",
-    "@twurple/eventsub": "^5.1.1",
-    "@twurple/pubsub": "^5.1.1",
-    "axios": "^0.26.1",
+    "@google-cloud/text-to-speech": "^4.0.0",
+    "@nebular/eva-icons": "^9.0.3",
+    "@nebular/theme": "^9.0.3",
+    "@twurple/api": "^5.2.0",
+    "@twurple/auth": "^5.2.0",
+    "@twurple/chat": "^5.2.0",
+    "@twurple/eventsub": "^5.2.0",
+    "@twurple/pubsub": "^5.2.0",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
-    "bootstrap": "^5.1.3",
-    "chart.js": "^3.7.1",
+    "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
     "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
     "eva-icons": "^1.1.3",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
-    "ionicons": "^6.0.1",
-    "mongoose": "^6.3.1",
+    "ionicons": "^6.0.2",
+    "mongoose": "^6.5.1",
     "mongoose-gridfs": "^1.3.0",
     "multer": "^1.4.4",
     "nebular-icons": "^1.1.0",
     "ng-apexcharts": "^1.7.1",
-    "ng2-charts": "^3.0.11",
+    "ng2-charts": "^4.0.0",
     "ngx-clipboard": "^15.1.0",
-    "ngx-device-detector": "^3.0.0",
+    "ngx-device-detector": "^4.0.0",
     "node-gtts": "^2.0.2",
-    "obs-websocket-js": "^5.0.0-beta.1",
+    "obs-websocket-js": "^5.0.1",
     "open": "^8.4.0",
     "rjs": "^4.0.2",
-    "rxjs": "^7.5.5",
-    "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1",
+    "rxjs": "^7.5.6",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "tslib": "^2.4.0",
     "uuid": "^8.3.2",
-    "zone.js": "^0.11.5"
+    "zone.js": "^0.11.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.1",
     "@angular/cli": "^14.1.1",
     "@angular/compiler-cli": "^14.1.1",
-    "@schematics/angular": "^13.3.3",
+    "@schematics/angular": "^14.1.1",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.25",
+    "@types/node": "^18.6.3",
     "@types/obs-studio": "^2.17.0",
     "@types/socket.io": "^3.0.2",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.6.3",
+    "nodemon": "^2.0.19",
+    "typescript": "^4.7.4",
     "yarn-upgrade-all": "^0.7.1"
   }
 }
