--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@twurple/eventsub": "^5.2.3",
     "@twurple/pubsub": "^5.2.3",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
